# omniapp

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
crates/omniapp-cli/: Cargo.toml
crates/omniapp-cli/src/: commands.rs  main.rs
crates/omniapp-core/: Cargo.toml
crates/omniapp-core/src/: cache.rs  document.rs  lib.rs  output.rs  query.rs  record.rs  relationship.rs  watcher.rs  workspace.rs  yaml_edit.rs
crates/omniapp-schema/: Cargo.toml
crates/omniapp-schema/src/: display.rs  lib.rs
crates/omniapp-site/: Cargo.toml
crates/omniapp-site/src/: build.rs  config.rs  context.rs  env.rs  lib.rs  pages.rs  render.rs  routes.rs
crates/omniapp-site/tests/: site.rs
crates/omniapp-web/: Cargo.toml
crates/omniapp-web/src/: app.css  app.js  index.html  lib.rs
docs/: architecture.md  project-format.md
examples/markdown-records/: .gitignore
examples/markdown-records/.omniapp/: config.yml
examples/markdown-records/.omniapp/models/: article.yml  post.yml
examples/markdown-records/.omniapp/views/: posts.yml
examples/markdown-records/articles/directory-record/: content.md
examples/markdown-records/posts/: welcome.md
