[workspace]
members = [
    "crates/omniapp-schema",
    "crates/omniapp-core",
    "crates/omniapp-site",
    "crates/omniapp-web",
    "crates/omniapp-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
notify = "8.2"
open = "5"
percent-encoding = "2"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rayon = "1"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
