[package]
name = "omniapp-cli"
description = "Command-line interface for OmniApp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "omniapp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
omniapp-core = { path = "../omniapp-core" }
omniapp-schema = { path = "../omniapp-schema" }
omniapp-web = { path = "../omniapp-web" }
open.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
