[package]
name = "omniapp-core"
description = "Filesystem-first workspace engine for OmniApp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
notify.workspace = true
omniapp-schema = { path = "../omniapp-schema" }
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
