[package]
name = "omniapp-schema"
description = "Declarative project format types and validation for OmniApp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
thiserror.workspace = true

[lints]
workspace = true
