[package]
name = "omniapp-site"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
minijinja.workspace = true
omniapp-core = { path = "../omniapp-core" }
omniapp-schema = { path = "../omniapp-schema" }
percent-encoding.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
