[package]
name = "omniapp-web"
description = "Local schema-driven web application for OmniApp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
omniapp-core = { path = "../omniapp-core" }
omniapp-schema = { path = "../omniapp-schema" }
omniapp-site = { path = "../omniapp-site" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[lints]
workspace = true

